--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,18 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@100&display=swap');
+      </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;300&family=Sarabun:wght@100&display=swap');
+      </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;300&family=Kanit:wght@200&family=Sarabun:wght@100&display=swap');
+      </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;300&family=Kanit:wght@200;300&family=Sarabun:wght@100&display=swap');
+      </style>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
